feat: simple insert and equality based queries
- rebuild datastore to use documents
- build v2 HTTP API that uses MongoDB style endpoints. ie. find, insert
- create Index struct
- create query lexer, parser, and instruction execution engine
- add test suite
- update docs for v2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "methoddb"
-version = "1.0.0"
+name = "rockumentdb"
+version = "2.0.0"
 authors = ["sirfuzzalot <57846408+sirfuzzalot@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
-rocket = "0.4.10"
+rocket = { version = "0.5.0-rc.1", features = ["json"]}
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-
-[dependencies.rocket_contrib]
-version = "0.4.10"
-default-features= false
-features = ["json"]
